update styles generalInfo block

--- a/blocks/engine/engine.scss
+++ b/blocks/engine/engine.scss
@@ -1,206 +1,19 @@
+@import "./__content/engine__content.scss";
+@import "./__img/engine__img.scss";
+@import "./__list-item/engine__list-item.scss";
+@import "./__list/engine__list.scss";
+@import "./__title/engine__title.scss";
+@import "./__wrapper-content/engine__wrapper-content.scss";
+@import "./__wrapper-img/engine__wrapper-img.scss";
+
 .engine {
   position: relative;
-  
   overflow: hidden;
   width: 100%;
 }
 
-.engine__content {
-    border-radius: 15px;
-  background-color: $color_background_engine;
- padding: 50px 19px 92px 19px;
-}
-
-.engine__line {
-  position: absolute;
-  display: block;
-  content: "_";
-  width: 1730px;
-  height: 40px;
-  opacity: 0.72;
-  background: linear-gradient(92deg, #0196f6, #0096f7);
-  filter: blur(9.5px);
-  z-index: 1;
-}
-
-.engine__line_first {
-  transform: translateX(-890px) rotate(78deg);
-
-}
-.engine__line_second {
-  left: 34%;
-  transform: translateX(-890px) rotate(78deg);
-
-}
-.engine__line_third {
-  left: 73%;
-  transform: translateX(-890px) rotate(78deg);
-}
-
-.engine__title {
-  position: relative;
-  z-index: 2;
-  color: $color_text_1;
-  font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
-  letter-spacing: -0.6px;
-  line-height: 30px;
-  text-align: center;
-  margin: 0 0 25px 0;
-}
-
-.engine__title_color {
-  color: $color_text_1_transparency;
-}
-
-.engine__list {
-  margin: 0;
-  padding: 0 0 0 20px;
-  max-width: 622px;
-  position: relative;
-  z-index: 2;
-
-}
-
-.engine__list-item {
-  color: $color_text_1;
-  font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
-}
-
-.engine__list-item:not(:last-child) {
-  margin: 0 0 15px 0;
-}
-
-.engine__list-item:last-child {
-  margin: 0 0 30px 0;
-}
-
-.engine__img {
-  display: block;
-  width: 233px;
-  position: relative;
-  z-index: 1;
-}
-
-.engine__wrapper-img {
-  position: relative;
-  width: fit-content;
-  margin: 0 auto;
-}
-
-.engine__wrapper-img::after {
-  position: absolute;
-  content: "";
-  z-index: 0;
-  width: 185px;
-  height: 185px;
-  border-radius: 50%;
-  color: $color_circle;
-  background-color: $color_circle;
-  top: 20%;
-  right: -10%;
-}
-
-
-@media screen and (min-width: 390px) {
-  .engine__img {
-    width: 284px;
-    height: 217px;
-  }
-
-  .engine__wrapper-img::after {
-    width: 226px;
-    height: 226px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .engine__content {
-    padding: 50px 67px;
-  }
-
-  .engine__title {
-    line-height: 47px;
-    text-align: left;
-    margin: 0 0 20px 0;
-    font-size: 34px;
-  }
-
-  .engine__list-item:last-child {
-    margin: 0;
-  }
-
-  .engine__wrapper-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-  }
-  .engine__line_first {
-    left: 0;
-  }
-  .engine__line_second {
-    left: 15%;
-  }
-  .engine__line_third {
-    left: 30%;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .engine__line_second {
-    left: 11%;
-  }
-  .engine__line_third {
-    left: 23%;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .engine__line_first {
-    left: 10%;
-  }
-
-  .engine__line_second {
-    left: 17%;
-  }
-  .engine__line_third {
-    left: 26%;
-  }
-
-  .engine__wrapper-content {
-    gap: 70px;
-  }
-
-  .engine__content {
-    padding: 150px 200px;
-  }
-}
-
 @media screen and (min-width: 1920px) {
-  .engine__line_first {
-    left: 12%;
-  }
-
-  .engine__line_second {
-    left: 22%;
-  }
-  .engine__line_third {
-    left: 40%;
-  }
-
-  .engine__wrapper-content {
-    gap: 194px;
-  }
-
-  .engine__title {
-    margin: 0 0 40px 0;
-  }
-
-  .engine {
+  .engine__content {
     padding: 200px 247px;
-  }
-
-  .engine__title {
-    font-size: 68px;
   }
 }
