--- a/blocks/generalInfo/__img/generalInfo__img.scss
+++ b/blocks/generalInfo/__img/generalInfo__img.scss
@@ -1,19 +1,19 @@
 .generalInfo__img {
   width: 99%;
+  height: auto;
 }
 
 @media screen and (min-width: 768px) {
   .generalInfo__img {
     display: block;
-    width: 350px;
-    position: absolute;
-    right: 0;
+    width: 420px;
+    height: 286px;
+    
   }
 }
 
 @media screen and (min-width: 1024px) {
   .generalInfo__img {
-    width: 450px;
     top: 25px;
   }
 }
@@ -21,6 +21,9 @@
 @media screen and (min-width: 1440px) {
   .generalInfo__img {
     bottom: -60px;
+    width: 620px;
+    height: 420px;    
+
   }
 }
 
