--- a/blocks/generalInfo/__title/generalInfo__title.scss
+++ b/blocks/generalInfo/__title/generalInfo__title.scss
@@ -7,12 +7,35 @@
 }
 
 @media screen and (min-width: 768px) {
-
   .generalInfo__title {
-    font-size: 33px;
-    line-height: 45px;
+    font-size: 27px;
+    line-height: 27px;
     letter-spacing: -1.36px;
     margin: 0;
+    max-width: 391px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .generalInfo__title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .generalInfo__title {
+    font-size: 51px;
+    line-height: 51px;
+    max-width: 470px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .generalInfo__title {
+    font-size: 68px;
+    line-height: 65px;
+    max-width: 635px;
   }
 }
 
