--- a/blocks/styles/styles.scss
+++ b/blocks/styles/styles.scss
@@ -10,13 +10,9 @@
 
 .body {
   background-color: $color_background;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
 }
 
-html {
+html, .body {
   width: 100%;
   height: 100%;
   margin: 0;
