--- a/blocks/engine/__content/engine__content.scss
+++ b/blocks/engine/__content/engine__content.scss
@@ -1,7 +1,11 @@
 .engine__content {
   border-radius: 15px;
   background-color: $color_background_engine;
-  padding: 50px 19px 92px 19px;
+  padding: 100px 19px 92px 19px;
+  background-image: url("/blocks/engine/img/engineDecor.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
 }
 
 
