--- a/blocks/engine/__title/engine__title.scss
+++ b/blocks/engine/__title/engine__title.scss
@@ -9,8 +9,8 @@
   line-height: 30px;
   text-align: center;
   margin: 0;
-  left: 0;
-  top: 0;
+  left: 20px;
+  top: -50px;
 }
 
 @media screen and (min-width: 768px) {
