--- a/blocks/generalInfo/generalInfo.scss
+++ b/blocks/generalInfo/generalInfo.scss
@@ -12,27 +12,26 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  flex-direction: row-reverse;
+  flex-direction: column;
 }
 
 .generalInfo {
   background-image: url("../img/decor.png");
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 0 0 80px 0;
 }
 
 @media screen and (min-width: 768px) {
   .generalInfo {
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row-reverse;
     width: 100%;
     z-index: 1;
+    margin: 0;
   }
 
   .generalInfo__content {
     padding: 60px 0 40px 0;
+    flex-direction: row-reverse;
   }
 }
 
