update structure of tecnologies blocks

--- a/blocks/generalInfo/__wrapper-recall-time/generalInfo__wreapper-recall-time.scss
+++ b/blocks/generalInfo/__wrapper-recall-time/generalInfo__wreapper-recall-time.scss
@@ -19,3 +19,9 @@
     font: 400 14px "Gilroy Medium", "Arial", "sans-serif";
   }
 }
+
+@media screen and (min-width: 390px) {
+  .generalInfo__wrapper-recall-time {
+    padding: 30px 0;
+}
+}
