add styles for popup

--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -1,1 +1,8 @@
 @import "./__input/form__input.scss";
+@import "./__link/form__link.scss";
+@import "./__police/form__police.scss";
+@import "./__wrapper-inputs/form__wrapper-inputs.scss";
+
+.form {
+    color: red;
+}
