--- a/blocks/styles/variables.scss
+++ b/blocks/styles/variables.scss
@@ -2,7 +2,7 @@ $color_text_default: #2B2E3E;
 $color_text_1: #ffffff;
 $color_text_1_transparency:  rgba(255, 255, 255, 0.80);
 $color_text_2: #009BFF;
-$color_text_3: rgba(255, 255, 255, 0.80);
+$color_text_3: rgba(43, 46, 62, 0.45);
 $color_button_default: #009BFF;
 $color_button_hover: rgba(0, 155, 255, 0.2);
 $color_background_engine: #009BFF;
@@ -13,4 +13,5 @@ $color_triangle: #009BFF;
 $color_background_default: #ffffff;
 $color_background_description: #F3F5FB;
 $color_background: #F0F3F9;
+$color_background_input: #EDF1F8;
 
