--- a/blocks/styles/styles.scss
+++ b/blocks/styles/styles.scss
@@ -7,6 +7,7 @@
 @import "../header/header.scss";
 @import "../technologies/technologies.scss";
 @import "../popup/popup.scss";
+@import "../form/form.scss";
 
 .body {
   background-color: $color_background;
