--- a/blocks/form/__police/form__police.scss
+++ b/blocks/form/__police/form__police.scss
@@ -4,3 +4,11 @@
     color: $color_text_3;
     margin: 15px 0 0 0;
 }
+
+@media screen and (min-width: 768px) {
+ .form__police {
+    text-align: left;
+    margin: 0;
+}
+}
+
