--- a/blocks/form/__wrapper-items/form__wrapper-items.scss
+++ b/blocks/form/__wrapper-items/form__wrapper-items.scss
@@ -1,6 +1,8 @@
 @media screen and (min-width: 768px) {
-  .form__wrapper-inputs {
+  .form__wrapper-items {
     display: flex;
     justify-content: space-between;
   }
 }
+
+
