--- a/blocks/popup/__content/popup__content.scss
+++ b/blocks/popup/__content/popup__content.scss
@@ -1,10 +1,12 @@
 .popup__content {
     box-sizing: border-box;
-    position: relative;
+    position: fixed;
     background-color: #fff;
     border-radius: 15px;
     width: 90%;
-    margin: 0 auto;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
     max-width: 280px;
     padding: 25px 20px 20px 20px;
 }
@@ -12,5 +14,19 @@
 @media screen and (min-width: 768px) {
   .popup__content {
     max-width: 700px;
+}
+}
+
+@media screen and (min-width: 1440px) {
+  .popup__content {
+    max-width: 800px;
+    padding: 45px 50px 45px 50px;
+}
+}
+
+@media screen and (min-width: 1920px) {
+  .popup__content {
+    max-width: 1061px;
+    padding: 55px 60px 65px 60px;
 }
 }
