--- a/blocks/popup/__subtitle/popup__subtitle.scss
+++ b/blocks/popup/__subtitle/popup__subtitle.scss
@@ -4,3 +4,11 @@
     color: $color_text_default;
     margin: 15px 0 25px 0;
 }
+
+@media screen and (min-width: 768px) {
+  .popup__subtitle {
+    text-align: left;
+    font-size: 16px;
+}
+}
+
