--- a/blocks/popup/__title/popup__title.scss
+++ b/blocks/popup/__title/popup__title.scss
@@ -4,3 +4,16 @@
     color: $color_text_default;
     margin: 0;
 }
+
+@media screen and (min-width: 768px) {
+  .popup__title {
+    text-align: left;
+    font-size: 30px;
+}
+}
+
+@media screen and (min-width: 1920px) {
+  .popup__title {
+    font-size: 38px;
+}
+}
