--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -142,9 +142,15 @@
 
 @media screen and (min-width: 768px) {
   .engine__wrapper-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 10px;
   }
 }
@@ -160,6 +166,8 @@
 }
 .engine__wrapper-img {
   position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto;
 }
@@ -288,6 +296,8 @@
 }
 @media screen and (min-width: 768px) {
   .generalInfo__wrapper-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
@@ -297,10 +307,17 @@
   }
 }
 .generalInfo__wrapper-recall-time {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 5px;
   padding: 18px 10px;
   width: 100%;
@@ -335,9 +352,16 @@
 
 .generalInfo__content {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .generalInfo {
@@ -355,7 +379,10 @@
   }
   .generalInfo__content {
     padding: 60px 0 40px 0;
-    flex-direction: row-reverse;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -372,9 +399,15 @@
   background-color: #D9F0FF;
   border: none;
   border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 5px;
   cursor: pointer;
 }
@@ -412,10 +445,17 @@
   }
 }
 .button-get-offer {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   border-radius: 5px;
   background-color: #009BFF;
@@ -435,6 +475,7 @@
     max-width: 258px;
     padding: 15px;
     margin: 0 15px 0 0;
+    font-size: 16px;
   }
 }
 @media screen and (min-width: 1920px) {
@@ -448,13 +489,18 @@
 }
 
 .header__content {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: #ffffff;
   width: 100%;
   padding: 5px 15px;
   border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: relative;
   z-index: 2;
 }
@@ -464,9 +510,15 @@
 }
 
 .header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 4px;
 }
 
@@ -490,7 +542,8 @@
   }
 }
 .technologies__content {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 50px 10px;
   background-color: #ffffff;
   border-radius: 15px;
@@ -501,7 +554,8 @@
 }
 
 .technologies__description {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 197px;
   border-radius: 10px;
   position: absolute;
@@ -511,7 +565,8 @@
   top: 65px;
   left: 15%;
   padding: 15px 20px;
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 3px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 3px 4px rgba(0, 0, 0, 0.25);
 }
 
 @media screen and (min-width: 390px) {
@@ -569,10 +624,19 @@
 
 @media screen and (min-width: 768px) {
   .technologies__wrappers-imgs {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 50px;
   }
   .technologies__wrapper-img:not(:last-child) {
@@ -584,12 +648,16 @@
 }
 
 .popup__content {
-  box-sizing: border-box;
-  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: fixed;
   background-color: #fff;
   border-radius: 15px;
   width: 90%;
-  margin: 0 auto;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
   max-width: 280px;
   padding: 25px 20px 20px 20px;
 }
@@ -599,6 +667,18 @@
     max-width: 700px;
   }
 }
+@media screen and (min-width: 1440px) {
+  .popup__content {
+    max-width: 800px;
+    padding: 45px 50px 45px 50px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .popup__content {
+    max-width: 1061px;
+    padding: 55px 60px 65px 60px;
+  }
+}
 .popup__title {
   text-align: center;
   font: 700 26px "Gilroy Bold", "Arial", "sans-serif";
@@ -606,6 +686,17 @@
   margin: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .popup__title {
+    text-align: left;
+    font-size: 30px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .popup__title {
+    font-size: 38px;
+  }
+}
 .popup__subtitle {
   text-align: center;
   font: 400 14px "Gilroy Regular", "Arial", "sans-serif";
@@ -613,6 +704,12 @@
   margin: 15px 0 25px 0;
 }
 
+@media screen and (min-width: 768px) {
+  .popup__subtitle {
+    text-align: left;
+    font-size: 16px;
+  }
+}
 .popup__close-btn {
   background-color: transparent;
   border: none;
@@ -639,12 +736,12 @@
 }
 
 .form__input {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 5px;
   background-color: #EDF1F8;
   border: none;
   width: 100%;
-  max-width: 290px;
   height: 55px;
   padding: 17px 20px;
 }
@@ -652,6 +749,16 @@
 @media screen and (min-width: 768px) {
   .form__input {
     max-width: 100%;
+    -ms-flex-preferred-size: 33%;
+        flex-basis: 33%;
+  }
+  .form__input[type=textarea] {
+    height: 180px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .form__input:not([type=textarea]) {
+    width: 300px;
   }
 }
 .form__link {
@@ -666,15 +773,34 @@
 }
 
 @media screen and (min-width: 768px) {
-  .form__wrapper-inputs {
-    display: flex;
-    justify-content: space-between;
+  .form__police {
+    text-align: left;
+    margin: 0;
   }
 }
-.form {
-  color: red;
+@media screen and (min-width: 768px) {
+  .form__wrapper-items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
-
+@media screen and (min-width: 768px) {
+  .form__wrapper-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 .body {
   background-color: #F0F3F9;
 }
@@ -685,5 +811,3 @@ html, .body {
   margin: 0;
   padding: 0;
 }
-
-/*# sourceMappingURL=styles.css.map */
