--- a/blocks/button-get-offer/button-get-offer.scss
+++ b/blocks/button-get-offer/button-get-offer.scss
@@ -10,6 +10,7 @@
     padding: 18px 60px;
     border: none;
     font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
+    cursor: pointer;
 }
 
 @media screen and (min-width: 390px) {
