--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -463,6 +463,7 @@
   padding: 18px 60px;
   border: none;
   font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
+  cursor: pointer;
 }
 
 @media screen and (min-width: 390px) {
@@ -716,6 +717,7 @@
   position: absolute;
   top: 10px;
   right: 5px;
+  cursor: pointer;
 }
 
 .popup__close-icon {
